--- a/public/navbar.css
+++ b/public/navbar.css
@@ -19,7 +19,7 @@
 }
 
 .topnav a.active {
-	background-color: #4CAF50;
+	background-color: #4ca0af;
 	color: white;
 }
 
@@ -28,29 +28,41 @@
 	
 }
 .topnav .logo{
+	display: block;
+	float: left;
+}
 
-	display:block;
-	float:left;
+.topnav input[type=text] {
+	float: right;
+	padding: 6px;
+	border: none;
+	border-radius: 25px;
+	margin-top: 8px;
+	margin-right: 16px;
+	font-size: 17px;
 }
 
 @media screen and (max-width: 600px) {
-	.topnav a:not(:first-child) {display: none;}
-	.topnav a.icon {
+	.topnav a:not(:first-child) {
+		display: none;
+	}
+	.topnav a.icon, .topnav input[type=text] {
 		float: right;
 		display: block;
 	}
 }
 
 @media screen and (max-width: 600px) {
-	.topnav.responsive {position: relative;}
-	.topnav.responsive .icon {
-		position: absolute;
-		right: 0;
-		top: 0;
-	}
-	.topnav.responsive a {
-		float: none;
-		display: block;
-		text-align: left;
-	}
+  .topnav a, .topnav input[type=text] {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
+  }
+  
+  .topnav input[type=text] {
+    border: 1px solid #ccc;  
+  }
 }
